<resources>
    <string name="app_name">RoomApp</string>
    <string name="lbl_name">Movie Name:</string>
    <string name="lbl_studio">Studio:</string>
    <string name="lbl_category">Category:</string>
    <string name="txt_name">Prueba</string>
    <string name="txt_studio">Prueba</string>
    <string name="txt_category">Prueba</string>
    <string name="lbl_add_movie">Add Movie</string>
</resources>
