<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="7dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    tools:context="com.salvador.roomapp.Activities.CardviewActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    >

    <TextView
        android:id="@+id/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textColor="#000"
        />

    <TextView
        android:id="@+id/txt_name"
        android:layout_toRightOf="@id/lbl_name"
        android:layout_toEndOf="@id/lbl_name"
        android:text="@string/txt_name"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_studio"
        android:layout_below="@id/lbl_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/txt_studio"
        android:layout_toRightOf="@id/lbl_studio"
        android:layout_toEndOf="@id/lbl_studio"
        android:layout_alignBaseline="@id/lbl_studio"
        android:text="@string/txt_studio"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_category"
        android:layout_below="@id/lbl_studio"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/txt_category"
        android:layout_toRightOf="@id/lbl_category"
        android:layout_toEndOf="@id/lbl_category"
        android:layout_alignBaseline="@id/lbl_category"
        android:text="@string/txt_category"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>



</android.support.v7.widget.CardView>
